updated dtos and some warnings